<resources>
    <string name="app_name">Contacts</string>
    <string name="description_picture">Picture of contact</string>
    <string name="title_new_contact">New contact</string>
    <string name="title_search">Search contact</string>
    <string name="title_switch">Change view</string>
    <string name="title_age">Age</string>
    <string name="title_weight">Weight</string>
    <string name="title_telephone">Telephone</string>
    <string name="title_email">Email</string>
    <string name="title_address">Address</string>
    <string name="title_add_contact">Add contact</string>
    <string name="title_delete">Delete contact</string>
    <string name="title_edit">Edit contact</string>
</resources>
